--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <title>Claire Tendo</title>
 <meta charset="UTF-8">
+<meta name="Resume" content="Resume for Claire Tendo">
+<meta name="keywords" content="fashion, design, claire tendo, bangkok, africa">
+<meta name="author" content="Claire Tendo">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <style>
 html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 </style>
+
 <body class="w3-light-grey">
 
 <!-- Page Container -->
@@ -24,12 +29,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-display-container">
 
 
-          <img src="https://lh3.googleusercontent.com/Kju7nY-0zXJ-q11YE1-MCtaORbH_S9_OUo9Fc69oq1BHOzRJjrgD-jAYxhNlNy9TAYqyrFTVQIQ0o106ctIWeIQUxYjCpf8GkOHGzkE6_XIj2JdiuERl_vt_1GKkicwcgjVJKQwP18t7p-yCUISRtsQTKKCrjjVB95ygOjQ4kA8BgPWdAw77UfupMfYSc3Sc1vJOILzGuZUw1fOhICKluyx0w4_7fi92LlHlSL4aU6kTpnpIh06ZR9qXQRRCjEyIsvVGLSZ1cF6brMVdUvExVFev-aDDtzbtxQBKG0S1FVM8B2s15kya7CYeGDJlOLxwoKa8p9DpMk8P6zoULoR_Tai4rwrbt0IYskMHvkpLK6FbVtpjOEnzxzZn-sR28bZ9ZCtVkIbQ4TQfIM_SCV4JNH9Yss4osgLePLR-VL14rtjCuTn6AAKzrPT3BRI22oFKhcw_iVlYnuzgZISb6LQmybCQQBUKRsFyx998IZR6uLI8zF95pqC3CA0sYygcbqsAs_ncOI1wdmYxqXspvQyLKNjVaJvmQjWmXTZ1qBQISkAFg6C_CfYIOmx3O_0icRVibvWxvCYK92sobU1zp4LJATAaslA5KWsvqc_XWVFi02vq8Ext5n-U=w576-h536-no" style="width:100%" alt="profile photo">
+          <img src="https://lh3.googleusercontent.com/EY5uLIh7z2gyzqEuNLS7Y0JmdLZyfrTnCib3YokwFwlCa9yCeWalio9dNiq8ej524jOh5-CziiAJFoyHzZfbi7Sep7OfNCtElJ_lsmk82pUmSXlLe9BlDk-bjbKNi9oXyO9rAc3Zt-5tkqHd27eGLiogyiGt1S7cjdJEbBPRsZmeI8TcT-N0C5IzC8JFGLrgvIa-Gq9d9OFEVeD3GczfaGeEekX9_TAVNZY9B_y1KedzT6_HvsBTYbeYjPbuNQBpYAZpLxwxzBnAHcqmqbjadWdQ0h5a4wV58Lq6KXGmKZIQX4Hx2083509gT8yOaTuoiDl_gAja7IpKhT23xvneaQyWkCmJM_gZzk6wu3HFkvVFnM5g2YhHFDaLxlngX1WAn6rR1R3Dv-wK22Yk-GS1T9qqYNIHRHMaMqS8gxiyhf8y5DSl7U_NN6IT8jVMOn02v4KmfMUtJvGH9HsiriSOdAD7QromP3JOqrxzTRP2mY29rnAnFC1dbAe1_gzPCppJ75MLOJyvkcl7GolwlYH9V_t3FAapG8qLtPw9N2FDHrQCng74GcM7s8JnBJ7JEFfNr4kn3ILQGOJ1wMrf0Qyelzdrg5HjHdq80u5roeU=w971-h843-no" style="width:100%" alt="profile photo">
 
 
 
-          <div class="w3-display-bottomleft w3-container w3-text-white">
-            <h2>Claire Tendo</h2>
+          <div class="w3-display-bottomleft w3-container w3-text-black">
+            <h1>Claire Tendo</h1>
           </div>
         </div>
         <div class="w3-container">
@@ -66,7 +71,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p>Illustrator</p>
           <div class="w3-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:95%"</div>
-              <div class="w3-center w3-text-black">95%</div>
+              <div class="w3-center w3-text-white">95%</div>
             </div>
           </div>
 
@@ -75,7 +80,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">80%</div>
           </div>
 
-          <p>QCAD</p>
+          <p>QCAD, AutoCAD</p>
           <div class="w3-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">80%</div>
           </div>
@@ -135,7 +140,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     		<a class="w3-button w3-left w3-hide-large w3-large w3-theme-11" href="javascript:void(0)" 
 			onclick="w3_open()"><i class="fa fa bars"></i></a>
         	</div>
-    		<h2><a href="file:///Users/florianmettke/Desktop/portfolio.html" class="w3-bar-item w3-button w3-hide-medium w3-hover-black">Portfolio</a></h2>
+    		<h2><a href=" portfolio " class="w3-bar-item w3-button w3-hide-medium w3-hover-black">Portfolio</a></h2>
 		</div>
     		</div>
 
@@ -146,7 +151,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     		<a class="w3-button w3-right w3-hide-large w3-large w3-theme-11" href="javascript:void(0)" 
 			onclick="w3_open()"><i class="fa fa bars"></i></a>
         	</div>
-    		<h2><a href="#blog" class="w3-bar-item w3-button w3-hide-medium w3-hover-black">Blog</a></h2>
+    		<h2><a href="https://clairetendo.wordpress.com/" class="w3-bar-item w3-button w3-hide-medium w3-hover-black">Blog</a></h2>
 		</div>
     		</div>
 	</div>
@@ -157,31 +162,29 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 	<div class="w3-container w3-card-2 w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-18"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-black"></i>Work Experience</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Fashion and tech solutions manager. Store manager/Parrish Jones.com-Bangkok.</b></h5>
+          <h5 class="w3-opacity"><b>Project manager/Parrish Jones.com-Bangkok.</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>July 2017 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-          <p>Creating a unique fashion concept for men and women from attire to accessories using the latest technology while providing innovative IT solutions to facilitate the smooth day to day running of the company.</p>
+          <p>Creating a unique fashion concept for men and women from garment to accessories using the latest technology while providing innovative IT solutions to facilitate production automation.</p>
           <hr>
 
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Pattern engineer and fashion consultant. <br>/Bespokify.com/Rara Curio.com-Hong Kong. Bangkok</br></b></h5>
           <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Nov 2016 - June 2017</h6>
-          <p>Recruited as the company's first pattern engineer with real fashion experience with accountability
-	for creating custom patterns using javascript coding as well as creating design concepts and illustrations for the company.</p>
+          <p>Creating custom patterns using javascript and CAD as well as creating design concepts and fashion illustrations.</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Founder and managing director / Papple Trees.Fashion and art gallery</b></h5>
           <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2015 - Jan 2016</h6>
-          <p>I started this brand to help artisans and young designers get the recognition they needed and
-	it grew into a shared space for art and fashion. </p><br>
+          <p>I started this brand as a platform for artisans and young designers get the exposure they needed to reach their sales targets.</p><br>
         </div>
 
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Founder and managing director / Claire Tendo Fashion House.Uganda-Kenya.</b></h5>
           <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2008 - Dec 2016</h6>
           <p>I started this brand straight out of high school and it grew into a brand that modern
-	professional women relied on for perfectly tailored clothes both for work and for casual or formal events.
+ professional women relied on for perfectly tailored clothes both for work and for casual or formal events.
 	The brand spread into different fashion stores in East Africa. </p><br>
         </div>
       </div>
@@ -220,7 +223,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 
 <footer class="w3-container w3-teal w3-center w3-margin-top">
-  <p>Find me on social media.</p>
+  <p>Social media.</p>
 
   <a href="https://www.google.co.th/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwjarYiCu5vWAhXLwI8KHUYlDccQFggmMAA&url=https%3A%2F		%2Fwww.facebook.com%2Fclairetendofashionhouse%2F&usg=AFQjCNFmpHXXxAtb7b_AUxlF-QA-ksIOag" target="_blank"><i class="fa fa-facebook-official 
 	w3-hover-opacity"></i></a>
@@ -228,8 +231,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <i class="fa fa-maxcdn w3-hover-opacity"></i>
   <i class="fa fa-instagram w3-hover-opacity"></i>
 
+
   <a href="https://www.linkedin.com/in/claire-tendo-1b502067/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
-  <p>Created by ©ClaireTendo</p>
+  <p>@ClaireTendo</p>
 </footer>
 
 </body>
